main page slide edit

--- a/pages/home.html
+++ b/pages/home.html
@@ -68,87 +68,114 @@
           </p>
           <a href="#product" data-page="product" class="home_view-more home_slide-item">view more <span>→</span></a>
         </div>
-        <div class="home_product-gallery">
-          
-          <div class="home_card">
-            <a href="product_body.html">
-              <img
-                src="img/products/thum_img_body_lotion.jpg"
-                alt="바디 로션"
-              />
-            </a>
-            <h4>VYOR 바이오르 바디 로션</h4>
-            <p>
-              Watered Soil - 도시 속에서 만나는 촉촉한 흙 향기<br />
-              NMN이 피부에 활력과 생기를 더하며 영양감 제공
-            </p>
-            <span class="home_price">84,000원 | 500ml</span>
-          </div>
+        <div class="home_gallery-wrap">
+          <div class="home_product-gallery" ontransitionend="imgLoop()">
+            <!-- clone 이미지 7번-->
+            <div class="home_card">
+              <a href="#product_facial">
+                <img src="img/products/thum_img_emulsion.jpg" alt="에멀젼" />
+              </a>
+              <h4>VYOR 바이오르 크림 에멀전</h4>
+              <p>Watered Soil - 도시 속의 자연의 향<br />피부 속까지 영양을 채워 건강한 윤기를 선사</p>
+              <span class="home_price">69,000원 | 500ml</span>
+            </div>
 
-          <div class="home_card">
-            <a href="product_body.html">
-              <img
-                src="img/products/thum_img_body_wash.jpg"
-                alt="바디워시"
-              />
-            </a>
-            <h4>VYOR 바이오르 바디 워시</h4>
-            <p>
-              Watered Soil - 도시 속에서 만나는 촉촉한 흙 향기<br />
-              부드러운 거품으로 피부자극 없이 순하게 세정
-            </p>
-            <span class="home_price">65,000원 | 500ml</span>
-          </div>
+            <div class="home_card">
+              <a href="#product_body">
+                <img
+                  src="img/products/thum_img_body_lotion.jpg"
+                  alt="바디 로션"
+                />
+              </a>
+              <h4>VYOR 바이오르 바디 로션</h4>
+              <p>
+                Watered Soil - 도시 속에서 만나는 촉촉한 흙 향기<br />
+                NMN이 피부에 활력과 생기를 더하며 영양감 제공
+              </p>
+              <span class="home_price">84,000원 | 500ml</span>
+            </div>
 
-          <div class="home_card">
-            <a href="product_hair.html">
-              <img src="img/products/thum_img_shampoo.jpg" alt="샴푸" />
-            </a>
-            <h4>VYOR 바이오르 샴푸</h4>
-            <p>
-              Watered Soil - 빗물 머금은 흙 내음처럼<br />
-              두피와 모발에 생기 부여, 부드러운 거품으로 두피를 편안하게<br />
-              클렌징
-            </p>
-            <span class="home_price">61,000원 | 500ml</span>
-          </div>
+            <div class="home_card">
+              <a href="#product_body">
+                <img
+                  src="img/products/thum_img_body_wash.jpg"
+                  alt="바디워시"
+                />
+              </a>
+              <h4>VYOR 바이오르 바디 워시</h4>
+              <p>
+                Watered Soil - 도시 속에서 만나는 촉촉한 흙 향기<br />
+                부드러운 거품으로 피부자극 없이 순하게 세정
+              </p>
+              <span class="home_price">65,000원 | 500ml</span>
+            </div>
 
-          <div class="home_card">
-            <a href="product_hair.html">
-              <img
-                src="img/products/thum_img_treatment.jpg"
-                alt="트리트먼트"
-              />
-            </a>
-            <h4>VYOR 바이오르 트리트 먼트</h4>
-            <p>
-              Watered Soil - 빗물 머금은 흙 내음처럼<br />
-              집중 영양으로 손상 모발에 탄력과 윤기 케어
-            </p>
-            <span class="home_price">68,000원 | 500ml</span>
-          </div>
+            <div class="home_card">
+              <a href="#product_hair">
+                <img src="img/products/thum_img_shampoo.jpg" alt="샴푸" />
+              </a>
+              <h4>VYOR 바이오르 샴푸</h4>
+              <p>
+                Watered Soil - 빗물 머금은 흙 내음처럼<br />
+                두피와 모발에 생기 부여, 부드러운 거품으로 두피를 편안하게<br />
+                클렌징
+              </p>
+              <span class="home_price">61,000원 | 500ml</span>
+            </div>
 
-          <div class="home_card">
-            <a href="product_facial.html">
-              <img src="img/products/thum_img_skin.jpg" alt="스킨" />
+            <div class="home_card">
+              <a href="#product_hair">
+                <img
+                  src="img/products/thum_img_treatment.jpg"
+                  alt="트리트먼트"
+                />
+              </a>
+              <h4>VYOR 바이오르 트리트 먼트</h4>
+              <p>
+                Watered Soil - 빗물 머금은 흙 내음처럼<br />
+                집중 영양으로 손상 모발에 탄력과 윤기 케어
+              </p>
+              <span class="home_price">68,000원 | 500ml</span>
+            </div>
+
+            <div class="home_card">
+              <a href="#product_facial">
+                <img src="img/products/thum_img_skin.jpg" alt="스킨" />
+              </a>
               <h4>VYOR 바이오르 크림 스킨</h4>
               <p>
                 Watered Soil - 도시 속의 자연의 향<br />
                 피부에 생기를 채우고 수분을 부드럽게 전달
               </p>
               <span class="home_price">64,000원 | 500ml</span>
-            </a>
-          </div>
-          <div class="home_card">
-            <a href="product_facial.html">
-              <img src="img/products/thum_img_emulsion.jpg" alt="에멀젼" />
-            </a>
-            <h4>VYOR 바이오르 크림 에멀전</h4>
-            <p>
-              Watered Soil - 도시 속의 자연의 향<br />
-              피부 속까지 영양을 채워 건강한 윤기를 선사
-            </p>
-            <span class="home_price">69,000원 | 500ml</span>
+              
+            </div>
+            <div class="home_card">
+              <a href="#product_facial">
+                <img src="img/products/thum_img_emulsion.jpg" alt="에멀젼" />
+              </a>
+              <h4>VYOR 바이오르 크림 에멀전</h4>
+              <p>
+                Watered Soil - 도시 속의 자연의 향<br />
+                피부 속까지 영양을 채워 건강한 윤기를 선사
+              </p>
+              <span class="home_price">69,000원 | 500ml</span>
+            </div>
+            <!-- clone 이미지 1번-->
+            <div class="home_card">
+              <a href="#product_body">
+                <img
+                  src="img/products/thum_img_body_lotion.jpg"
+                  alt="바디 로션"
+                />
+              </a>
+              <h4>VYOR 바이오르 바디 로션</h4>
+              <p>
+                Watered Soil - 도시 속에서 만나는 촉촉한 흙 향기<br />
+                NMN이 피부에 활력과 생기를 더하며 영양감 제공
+              </p>
+              <span class="home_price">84,000원 | 500ml</span>
+            </div>
           </div>
         </div>
       </div>
@@ -204,7 +231,7 @@
             도시의 감각을 닮은 시그니처 향,<br/>
             비건 자연 성분이 완성한 클린 뷰티 브랜드 비오르입니다.<br/>
             당신만의 향을 찾는 여정, 지금 비오르와 함께 하세요.</p>
-          <a href="../pages/contact.html" class="home_contact_view-more">view more <span>→</span></a>
+          <a href="#contact" class="home_contact_view-more">view more <span>→</span></a>
         </div>
       </div>
     </section>
