--- a/pages/home.html
+++ b/pages/home.html
@@ -66,7 +66,7 @@
           <p class="home_slide-item">
             VYOR은 감각적인 도시의 스타일에 비건 철학과 자연에서 온 클린 성분만을 고집합니다.
           </p>
-          <a href="#product" data-page="product" class="home_view-more home_slide-item">view more <span>→</span></a>
+          <a href="#product" data-page="product" class="home_view-more home_slide-item">view more <span></span></a>
         </div>
         <div class="home_gallery-wrap">
           <div class="home_product-gallery" ontransitionend="imgLoop()">
