--- a/pages/brand.html
+++ b/pages/brand.html
@@ -81,7 +81,7 @@
 
             <div class="brandRightbox_3">
                 <ul>
-                    <li>
+                    <li li class="brand3-on">
                         <div class="front">
                             <div class="tit1"><span>V</span>YOR</div>
                             <div class="tit2">Vitality</div>
@@ -317,6 +317,7 @@
                     let progress = (startY - rect.bottom) / (startY - endY);
                     progress = Math.min(Math.max(progress, 0), 1);
 
+                    // 위로 올릴 때도 자연스럽게
                     progress = progress < 0.02 ? 0 : progress;
                     progress = progress > 0.98 ? 1 : progress;
 
@@ -332,8 +333,36 @@
                 passive: true,
             });
 
-            //섹션3-------------
+            //섹션2
 
+            (function () {
+                const target = document.querySelector(".brandLeftbox_2");
+                if (!target) return;
+
+                // 1) 스크롤해서 보이면 on-show
+                function checkVisible() {
+                    const rect = target.getBoundingClientRect();
+                    const vh =
+                        window.innerHeight ||
+                        document.documentElement.clientHeight;
+
+                    // 화면 안에 조금이라도 들어오면 보이게
+                    if (rect.top < vh * 0.85 && rect.bottom > 0) {
+                        target.classList.add("on-show");
+                        window.removeEventListener("scroll", onScroll);
+                    }
+                }
+
+                function onScroll() {
+                    checkVisible();
+                }
+
+                // 2) 로드되자마자 한 번 체크
+                window.addEventListener("load", checkVisible);
+                window.addEventListener("scroll", onScroll);
+            })();
+
+            //섹션3
             //왼쪽이미지상자
             (function brand3FadeGallery() {
                 const section = document.getElementById("brand_3");
