--- a/pages/contact.html
+++ b/pages/contact.html
@@ -80,66 +80,107 @@
             </div>
         </section>
 
+        <!-- 팝업창 구조 -->
+        <div id="popupOverlay">
+            <div class="popupBox">
+                <div class="popupClose">×</div>
+                <h2>문의가 완료되었습니다.</h2>
+                <p>담당자가 확인 후 연락드리겠습니다.</p>
+            </div>
+        </div>
+
         <!-- con섹션1 -->
 
         <script>
-            const contact_sec = document.getElementById("contact");
-            const contact_text = contact_sec.querySelector(".contactText");
+            (function () {
+                const sec = document.getElementById("contact");
+                const txt = sec?.querySelector(".contactText");
 
-            let contact_ready = false;
-            let contact_rafId = null;
+                let ready = false;
+                let rafId = null;
 
-            contact_text.addEventListener("animationend", () => {
-                contact_text.style.animation = "none";
-                contact_text.style.transform = "translateY(0)";
-                contact_ready = true;
-                contact_onScroll();
-            });
+                if (txt) {
+                    txt.addEventListener("animationend", () => {
+                        txt.style.animation = "none";
+                        txt.style.transform = "translateY(0)";
+                        ready = true;
+                        onScroll();
+                    });
+                } else {
+                    ready = true;
+                }
 
-            function contact_applyProgress(progress) {
-                const vw = window.innerWidth;
-                const startLeft = 0.05 * vw;
-                const endLeft = -0.55 * vw;
+                function applyProgress(progress) {
+                    if (!txt) return;
+                    const vw = window.innerWidth;
+                    const startLeft = 0.05 * vw;
+                    const endLeft = -0.55 * vw;
+                    const eased = 1 - Math.pow(1 - progress, 0.1);
+                    const opacity = 1 - Math.pow(progress, 1.3);
+                    const left = startLeft + (endLeft - startLeft) * eased;
+                    txt.style.left = left + "px";
+                    txt.style.opacity = opacity.toFixed(3);
+                }
 
-                const eased = 1 - Math.pow(1 - progress, 0.1);
+                function onScroll() {
+                    if (!ready) return;
+                    if (rafId) return;
 
-                // 투명도
-                const opacity = 1 - Math.pow(progress, 1.3);
+                    rafId = requestAnimationFrame(() => {
+                        rafId = null;
+                        const rect = sec.getBoundingClientRect();
+                        const vh = window.innerHeight;
+                        const startY = vh * 0.9;
+                        const endY = vh * 0.05;
+                        let progress = (startY - rect.bottom) / (startY - endY);
+                        progress = Math.min(Math.max(progress, 0), 1);
+                        if (progress < 0.02) progress = 0;
+                        if (progress > 0.98) progress = 1;
+                        applyProgress(progress);
+                    });
+                }
 
-                const left = startLeft + (endLeft - startLeft) * eased;
+                window.addEventListener("scroll", onScroll, { passive: true });
+                window.addEventListener("resize", onScroll, { passive: true });
 
-                contact_text.style.left = left + "px";
-                contact_text.style.opacity = opacity.toFixed(3);
-            }
+                // 2. 팝업 열기
+                const inquiryBtn = document.getElementById("conBtnTxt");
+                const popupOverlay = document.getElementById("popupOverlay");
+                const popupClose = popupOverlay?.querySelector(".popupClose");
 
-            function contact_onScroll() {
-                if (!contact_ready) return;
-                if (contact_rafId) return;
+                if (inquiryBtn && popupOverlay) {
+                    inquiryBtn.style.cursor = "pointer";
 
-                contact_rafId = requestAnimationFrame(() => {
-                    contact_rafId = null;
+                    inquiryBtn.addEventListener("click", () => {
+                        const inputs = document.querySelectorAll(
+                            ".con2_Right_InBox input, .con2_Right_InBox textarea"
+                        );
+                        let allFilled = true;
+                        inputs.forEach((input) => {
+                            if (!input.value.trim()) allFilled = false;
+                        });
 
-                    const rect = contact_sec.getBoundingClientRect();
-                    const vh = window.innerHeight;
+                        if (!allFilled) {
+                            alert("입력란을 모두 채워주세요");
+                            return;
+                        }
 
-                    const startY = vh * 0.9;
-                    const endY = vh * 0.05;
-                    let progress = (startY - rect.bottom) / (startY - endY);
-                    progress = Math.min(Math.max(progress, 0), 1);
+                        popupOverlay.classList.add("show");
+                    });
+                }
 
-                    progress = progress < 0.02 ? 0 : progress;
-                    progress = progress > 0.98 ? 1 : progress;
+                if (popupClose && popupOverlay) {
+                    popupClose.addEventListener("click", () => {
+                        popupOverlay.classList.remove("show");
+                    });
 
-                    contact_applyProgress(progress);
-                });
-            }
-
-            window.addEventListener("scroll", contact_onScroll, {
-                passive: true,
-            });
-            window.addEventListener("resize", contact_onScroll, {
-                passive: true,
-            });
+                    popupOverlay.addEventListener("click", (e) => {
+                        if (e.target === popupOverlay) {
+                            popupOverlay.classList.remove("show");
+                        }
+                    });
+                }
+            })();
         </script>
     </body>
 </html>
