--- a/pages/home.html
+++ b/pages/home.html
@@ -35,7 +35,7 @@
      <section id="home_intro">
       <div class="home_intro-inner home_fade-item">
         <div class="home_intro-left">
-          <h2>Your Signature,<br />Your VYOR.</h2>
+          <h2>Your Signature,<br />Your <span class="vyor-text">VYOR.</span></h2>
         </div>
         <div class="home_intro-right">
           <p>
@@ -130,7 +130,7 @@
                   alt="트리트먼트"
                 />
               </a>
-              <h4>VYOR 바이오르 트리트 먼트</h4>
+              <h4>VYOR 바이오르 트리트먼트</h4>
               <p>
                 Watered Soil - 빗물 머금은 흙 내음처럼<br />
                 집중 영양으로 손상 모발에 탄력과 윤기 케어
