main edit-rnd test animation

--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -42,7 +42,7 @@
         <li class="menuLarge">Contact
           <ul class="menuSmall">
             <li><a href="#contact" data-page="contact">CONTACT</a></li>
-            <li><a href="#contact_address" data-page="contact_address">DIRECTIONS</a></li>
+            <li><a href="#contact_address" data-page="contact_address">CONTACT US</a></li>
           </ul>
         </li>
       </ul>
