1030 마지막수정

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -84,8 +84,11 @@
         <div id="popupOverlay">
             <div class="popupBox">
                 <div class="popupClose">×</div>
-                <h2>문의가 완료되었습니다.</h2>
-                <p>담당자가 확인 후 연락드리겠습니다.</p>
+
+                <p>고객님의 문의가 정상적으로 등록되었습니다.</p>
+                <p>담당자가 내용을 확인 후 빠르게 연락드리겠습니다.</p>
+                <br />
+                <h2>VYOR에 관심 가져주셔서 진심으로 감사드립니다.</h2>
             </div>
         </div>
 
