--- a/pages/home.html
+++ b/pages/home.html
@@ -70,7 +70,7 @@
         </div>
         <div class="home_gallery-wrap">
           <div class="home_product-gallery" ontransitionend="imgLoop()">
-            <!-- clone 이미지 7번-->
+            <!-- clone 이미지 6번-->
             <div class="home_card">
               <a href="#product_facial">
                 <img src="img/products/thum_img_emulsion.jpg" alt="에멀젼" />
@@ -243,16 +243,8 @@
             <img src="img/popup/pop-up1.jpg" alt="popup">
         </div>
         <div class="popup_tBox">
-            <!-- <div>오늘 하루 보지 않기</div> -->
-            <button id="popupBtn" onclick="closePopUp()">CLOSE</button>
+            <button id="popupBtn" >CLOSE</button>
         </div>
     </div>
-    <script>
-      document.getElementById("popupBtn").style.cursor = "pointer";
-      function closePopUp(){
-        document.getElementById("popupBox").style.display = "none";
-      };
-    </script>
-    <!-- 팝업창 코드 -->
   </body>
 </html>
