home js css html edit

--- a/pages/home.html
+++ b/pages/home.html
@@ -33,11 +33,11 @@
 
     <!-- ================= INTRO SECTION ================= -->
      <section id="home_intro">
-      <div class="home_intro-inner home_fade-item">
-        <div class="home_intro-left">
-          <h2>Your Signature,<br />Your <span class="vyor-text">VYOR.</span></h2>
-        </div>
-        <div class="home_intro-right">
+      <div class="home_intro-inner">
+  <div class="home_intro-left home_fade-item">
+    <h2>Your Signature,<br />Your <span class="vyor-text">VYOR.</span></h2>
+  </div>
+  <div class="home_intro-right home_fade-item">
           <p>
             VYOR의 “Watered Soil”은 바쁜 도시 속에서도 사계절의 균형과 자연의
             호흡을 느낄 수 있도록 설계된 향입니다.<br />
