반응형 수정 계속

--- a/pages/rndTechnology.html
+++ b/pages/rndTechnology.html
@@ -37,8 +37,7 @@
       <div class="grid_container">
          <div class="grid grid1">
             <div class="outImg">
-               <div class="innerImg">
-               </div>
+               <div class="innerImg"></div>
                <div class="text_area">
                   <h4>VYOR의 혁신적 R&D</h4>
                   <h1>PILKO COSPHARM</h1>
