메인화면 수정완료

--- a/pages/home.html
+++ b/pages/home.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vyor Clone | Home</title>
-    <!-- <link rel="stylesheet" href="../css/home.css" />
-    <script src="../js/home.js" defer></script> -->
+    <link rel="stylesheet" href="../css/home.css" />
+    <script src="../js/home.js" defer></script>
   </head>
 
   <body>
@@ -33,30 +33,29 @@
 
     <!-- ================= INTRO SECTION ================= -->
      <section id="home_intro">
-      <div class="home_intro-inner">
-  <div class="home_intro-left home_fade-item">
-    <h2>Your Signature,<br />Your <span class="vyor-text">VYOR.</span></h2>
+  <div class="home_intro-inner">
+    <div class="home_intro-left">
+      <h2>
+        <span class="home_fade-text home_active">Your Signature,</span><br />
+        <span class="home_fade-text home_active">Your</span>
+        <span class="home_fade-text vyor-text home_active">VYOR.</span>
+      </h2>
+    </div>
+
+    <div class="home_intro-right">
+      <p class="home_fade-text">
+        VYOR의 “Watered Soil”은 바쁜 도시 속에서도 사계절의 균형과 자연의 호흡을 느낄 수 있도록 설계된 향입니다.<br />
+        촉촉한 흙내음과 자연의 깊은 고요함으로 대지의 숨결과 도시의 잔상을 함께 담은 “Watered Soil”은 단순한 향을 넘어 내면의 평화와 몰입의 순간, 존재의 본질로 이끄는 감각의 여정을 시작하게 합니다.<br />
+        VYOR은 당신의 본질을 깨우고, 자연스럽고 우아한 아름다움이 피어나는 순간을 함께합니다.
+      </p>
+      <a href="#brand" data-page="brand" class="home_view-more home_fade-text">view more <span></span></a>
+    </div>
   </div>
-  <div class="home_intro-right home_fade-item">
-          <p>
-            VYOR의 “Watered Soil”은 바쁜 도시 속에서도 사계절의 균형과 자연의
-            호흡을 느낄 수 있도록 설계된 향입니다.<br />
-            촉촉한 흙내음과 자연의 깊은 고요함으로 대지의 숨결과 도시의 잔상을
-            함께 담은 “Watered Soil”은 단순한 향을 넘어 내면의 평화와 몰입의
-            순간, 존재의 본질로 이끄는 감각의 여정을 시작하게 합니다.<br />
-            VYOR은 당신의 본질을 깨우고, 자연스럽고 우아한 아름다움이 피어나는
-            순간을 함께합니다.
-          </p>
-          <a href="#brand" data-page="brand" class="home_view-more link_brand">view more <span></span></a>
-        </div>
-      </div>
 
-      <!-- Background Shapes -->
-      <div class="home_bg-shape home_shape-left"></div>
-      <div class="home_bg-shape home_shape-right"></div>
-      
-    </section>
-
+  <!-- Background Shapes -->
+  <div class="home_bg-shape home_shape-left"></div>
+  <div class="home_bg-shape home_shape-right"></div>
+</section>
     <!-- ================= PRODUCT SECTION ================= -->
     <section id="home_product">
       <div class="home_product-inner">
