반응형 rnd pages all edit

--- a/pages/rndTechnology.html
+++ b/pages/rndTechnology.html
@@ -33,8 +33,8 @@
          <div class="frame2"></div>
    </section>
 
-   <section id="rnd_sec3" class="rnd_sec">
-      <div class="grid_container">
+   <section id="rnd_sec3" class="rnd_sec_long">
+      <div class="grid_container tech_grid">
          <div class="grid grid1">
             <div class="outImg">
                <div class="innerImg"></div>
@@ -63,11 +63,6 @@
                </div>
             </div>
          </div>
-      </div>
-   </section>
-
-   <section id="rnd_sec4" class="rnd_sec">
-      <div class="grid_container">
          <div class="grid grid3">
             <div class="outImg ">
                <div class="grid3Img">
@@ -95,7 +90,6 @@
                </div>
             </div>
          </div>
-      
          <div class="grid grid4">
             <div class="outImg">
                <div class="innerImg"></div>
