--- a/pages/rndProduction.html
+++ b/pages/rndProduction.html
@@ -18,7 +18,7 @@
       </div>
    </section>
 
-   <section id="rnd_sec2" class="rnd_content rnd_production_sec2 rnd_sec">
+   <section id="rnd_sec2" class="rnd_content rnd_production_sec2">
       <div class="mid_menu">
          <ul class="sub_menu">
             <li><a href="#rndTechnology">테크놀로지</a></li>
@@ -26,6 +26,9 @@
             <li><a href="#rndProduction"><strong>생산시설</strong></a></li>
          </ul>
       </div>
+   </section>
+
+   <section id="rnd_sec3" class="rnd_sec rnd_production_sec3">
       <div class="pro_grid">
          <div class="grid grid7">
             <div class="outImg">
@@ -37,24 +40,20 @@
             <div class="text_desc">
                <div>
                   <h4>비오르 핵심기술의 원동력</h4>
-                  <p>R&D센터는 특화된 기능성 원료를 기반으로<br>
-                  지속적인 혁신과 창의적인 신제품 개발에 전념하고 있습니다.<br>
-                  기초 연구에서 응용 연구까지 철저하고 체계적인 접근 방식을 통해<br>
-                  새로운 제형을 개발하고, 이를 제품화하는 전 과정을 실현하고 있습니다.</p>
+                  <p>R&D센터는 특화된 기능성 원료를 기반으로 <br>
+                     지속적인 혁신과 창의적인 신제품 개발에 전념하고 있습니다.<br>
+                     기초 연구에서 응용 연구까지 철저하고 체계적인 접근 방식을 통해<br>
+                     새로운 제형을 개발하고, 이를 제품화하는 전 과정을 실현하고 있습니다.</p>
                </div>
                <div>
                   <h4>보유기술</h4>
                   <h5>바이오신소재 원천기술</h5>
                   <p>피부과학 연구소는 바이오 활성 소재를 활용한 코스메슈티컬 제품을 연구.개발.생산하며,<br>
-                  지속적인 품질과 효능 향상에 힘쓰고 있습니다. 차별화된 제품으로 시장 경쟁력을 유지하며,<br>
-                  최신 피부과학 연구를 바탕으로 안전하고 효과적인 제품을 제공합니다.</p>      
+                     지속적인 품질과 효능 향상에 힘쓰고 있습니다. 차별화된 제품으로 시장 경쟁력을 유지하며,<br>
+                     최신 피부과학 연구를 바탕으로 안전하고 효과적인 제품을 제공합니다.</p>      
+               </div>
             </div>
-         </div>
-      </div>
-   </section>
-
-   <section id="rnd_sec3" class="rnd_sec rnd_production_sec3">
-      <div class="pro_grid">
+         </div>  
          <div class="grid grid9">
             <ul>
                <li class="text_rnd active">
@@ -95,7 +94,6 @@
                </li>
             </ul>
          </div>
-              
          <div class="grid grid10">
             <div class="outImg">
                <img src="img/rnd/m33_img3.jpg" alt="이미지">
