--- a/pages/contact.html
+++ b/pages/contact.html
@@ -96,57 +96,67 @@
 
         <script>
             (function () {
-                const sec = document.getElementById("contact");
-                const txt = sec?.querySelector(".contactText");
+                const isMobile =
+                    window.matchMedia("(max-width: 768px)").matches;
 
-                let ready = false;
-                let rafId = null;
+                if (!isMobile) {
+                    const sec = document.getElementById("contact");
+                    const txt = sec?.querySelector(".contactText");
 
-                if (txt) {
-                    txt.addEventListener("animationend", () => {
-                        txt.style.animation = "none";
-                        txt.style.transform = "translateY(0)";
+                    let ready = false;
+                    let rafId = null;
+
+                    if (txt) {
+                        txt.addEventListener("animationend", () => {
+                            txt.style.animation = "none";
+                            txt.style.transform = "translateY(0)";
+                            ready = true;
+                            onScroll();
+                        });
+                    } else {
                         ready = true;
-                        onScroll();
+                    }
+
+                    function applyProgress(progress) {
+                        if (!txt) return;
+                        const vw = window.innerWidth;
+                        const startLeft = 0.05 * vw;
+                        const endLeft = -0.55 * vw;
+                        const eased = 1 - Math.pow(1 - progress, 0.1);
+                        const opacity = 1 - Math.pow(progress, 1.3);
+                        const left = startLeft + (endLeft - startLeft) * eased;
+                        txt.style.left = left + "px";
+                        txt.style.opacity = opacity.toFixed(3);
+                    }
+
+                    function onScroll() {
+                        if (!ready) return;
+                        if (rafId) return;
+
+                        rafId = requestAnimationFrame(() => {
+                            rafId = null;
+                            const rect = sec.getBoundingClientRect();
+                            const vh = window.innerHeight;
+                            const startY = vh * 0.9;
+                            const endY = vh * 0.05;
+                            let progress =
+                                (startY - rect.bottom) / (startY - endY);
+                            progress = Math.min(Math.max(progress, 0), 1);
+                            if (progress < 0.02) progress = 0;
+                            if (progress > 0.98) progress = 1;
+                            applyProgress(progress);
+                        });
+                    }
+
+                    window.addEventListener("scroll", onScroll, {
+                        passive: true,
                     });
-                } else {
-                    ready = true;
-                }
-
-                function applyProgress(progress) {
-                    if (!txt) return;
-                    const vw = window.innerWidth;
-                    const startLeft = 0.05 * vw;
-                    const endLeft = -0.55 * vw;
-                    const eased = 1 - Math.pow(1 - progress, 0.1);
-                    const opacity = 1 - Math.pow(progress, 1.3);
-                    const left = startLeft + (endLeft - startLeft) * eased;
-                    txt.style.left = left + "px";
-                    txt.style.opacity = opacity.toFixed(3);
-                }
-
-                function onScroll() {
-                    if (!ready) return;
-                    if (rafId) return;
-
-                    rafId = requestAnimationFrame(() => {
-                        rafId = null;
-                        const rect = sec.getBoundingClientRect();
-                        const vh = window.innerHeight;
-                        const startY = vh * 0.9;
-                        const endY = vh * 0.05;
-                        let progress = (startY - rect.bottom) / (startY - endY);
-                        progress = Math.min(Math.max(progress, 0), 1);
-                        if (progress < 0.02) progress = 0;
-                        if (progress > 0.98) progress = 1;
-                        applyProgress(progress);
+                    window.addEventListener("resize", onScroll, {
+                        passive: true,
                     });
                 }
 
-                window.addEventListener("scroll", onScroll, { passive: true });
-                window.addEventListener("resize", onScroll, { passive: true });
-
-                // 2. 팝업 열기
+                // 팝업 열기
                 const inquiryBtn = document.getElementById("conBtnTxt");
                 const popupOverlay = document.getElementById("popupOverlay");
                 const popupClose = popupOverlay?.querySelector(".popupClose");
