rndProduction.html 1 line edit

--- a/pages/rndProduction.html
+++ b/pages/rndProduction.html
@@ -18,7 +18,7 @@
       </div>
    </section>
 
-   <section id="rnd_sec2" class="rnd_content rnd_production_sec2">
+   <section class="rnd_content rnd_production_sec2">
       <div class="mid_menu">
          <ul class="sub_menu">
             <li><a href="#rndTechnology">테크놀로지</a></li>
