--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
 
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="/vyor/css/style.css" />
+    <link rel="stylesheet" href="/vyor/css/header.css" />
+    <link rel="stylesheet" href="/vyor/css/footer.css" />
 
     <title>VYOR</title>
   </head>
@@ -33,6 +33,6 @@
       src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=cc276c8e4982a4daa6075e4c1b7f6991&libraries=services,clusterer,drawing"
     ></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/vyor/js/main.js"></script>
   </body>
 </html>
